added inventory and mongo.repo

--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -19,7 +19,7 @@
       enabled: yes
 
   - name: allow remote connections
-    ansible.buitin.replace:
+    ansible.builtin.replace:
      path: /etc/mongod.conf
      regexp: '127.0.0.1'
      replace: '0.0.0.0'
