--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
 [mongodb]
 mongodb.shivarampractise.online
 [catalogue]
-catalogue.shivarampractice.online
+catalogue.shivarampractise.online
 [user]
 user.shivarampractice.online
 [cart]
