--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -9,3 +9,17 @@
     ansible.builtin.dnf:
       name: nodejs
       state: present
+  
+  - name: create roboshop user
+    ansible.builtin.user:
+      name: roboshop
+  
+  # - name: Recursively remove app directory
+  #   ansible.builtin.file:
+  #     path: /app
+  #     state: absent
+
+  - name: create app directory
+    ansible.builtin.file:
+      path: /app
+      state: directory
