--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -14,10 +14,10 @@
     ansible.builtin.user:
       name: roboshop
   
-  # - name: Recursively remove app directory
-  #   ansible.builtin.file:
-  #     path: /app
-  #     state: absent
+  - name: Recursively remove app directory
+    ansible.builtin.file:
+      path: /app
+      state: absent
 
   - name: create app directory
     ansible.builtin.file:
