--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: Disable old node js and enable nodejs
-    ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+    ansible.builtin.command: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
   
   - name: Install nodejs
     ansible.builtin.dnf:
@@ -34,3 +34,10 @@
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
+
+  - name: install dependencies
+    ansible.builtin.command: npm install
+    args:
+      chdir: somedir/
+
+                  
