--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: Disable old node js and enable nodejs
-    ansible.builtin.command: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+    ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
   
   - name: Install nodejs
     ansible.builtin.dnf:
@@ -38,6 +38,6 @@
   - name: install dependencies
     ansible.builtin.command: npm install
     args:
-      chdir: somedir/
+      chdir: /app
 
                   
