--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -40,4 +40,14 @@
     args:
       chdir: /app
 
+  - name: copy catalogue service
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: /etc/systemd/system/catalogue.service
+
+  - name: deamon reload and start
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+
+
                   
