--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -68,6 +68,9 @@
     ansible.builtin.debug:
       msg: "product count: {{product_count}}"
 
+  - name: load catalogue data
+    ansible.builtin.command: mongo --host mongodb.shivarampractise.online </app/schema/catalogue.js
+
 
 
                   
