--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -70,6 +70,7 @@
 
   - name: load catalogue data
     ansible.builtin.command: mongo --host mongodb.shivarampractise.online < /app/schema/catalogue.js
+    when: product_count.stdout == "0"
 
 
 
