--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -64,13 +64,19 @@
     ansible.builtin.command: mongo --host mongodb.shivarampractise.online --quiet --eval 'db.getSiblingDB("catalogue");db.products.count()'
     register: product_count
 
-  - name: print the count
-    ansible.builtin.debug:
-      msg: "product count: {{product_count}}"
+  # - name: print the count
+  #   ansible.builtin.debug:
+  #     msg: "product count: {{product_count}}"
 
   - name: load catalogue data
     ansible.builtin.command: mongo --host mongodb.shivarampractise.online < /app/schema/catalogue.js
     when: product_count.stdout == "0"
+
+  - name: start and enable catalogue
+    ansible.builtin.service:
+      name: catalogue
+      state: restarted
+      enabled: yes
 
 
 
