--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -69,8 +69,8 @@
   #     msg: "product count: {{product_count}}"
 
   - name: load catalogue data
-    ansible.builtin.command: mongo --host mongodb.shivarampractise.online </app/schema/catalogue.js
-    #when: product_count.stdout == "0"
+    ansible.builtin.command: mongo --host mongodb.shivarampractise.online < /app/schema/catalogue.js
+    when: product_count.stdout == "0"
 
   - name: start and enable catalogue
     ansible.builtin.service:
