--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -60,8 +60,8 @@
       name: mongodb-org-shell
       state: present
 
-  - name: get the catagories count
-    ansible.builtin.command: mongo --host mongodb.shivarampractise.online --quiet --eval 'db.getSiblingDB("catalogue");db.products.count()'
+  - name: get the categories count
+    ansible.builtin.command:  mongo --host mongodb.shivarampractise.online --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
     register: product_count
 
   # - name: print the count
