--- a/inventory.ini
+++ b/inventory.ini
@@ -6,3 +6,15 @@ catalogue.shivarampractise.online
 user.shivarampractice.online
 [cart]
 cart.shivarampractice.online
+[web]
+web.shivarampractise.online
+[redis]
+redis.shivarampractise.online
+[mysql]
+mysql.shivarampractise.online
+[shipping]
+shipping.shivarampractise.online
+[rabbitmq]
+rabbitmq.shivarampractise.online
+[payment]
+payment.shivarampractise.online
