--- a/redis.yaml
+++ b/redis.yaml
@@ -18,7 +18,7 @@
 
   - name: allow remote connections
     ansible.builtin.replace:
-      path: /etc/mongod.conf
+      path: /etc/redis/redis.conf
       regexp: '127.0.0.1'
       replace: '0.0.0.0'
 
