--- a/inventory.ini
+++ b/inventory.ini
@@ -3,7 +3,7 @@ mongodb.shivarampractise.online
 [catalogue]
 catalogue.shivarampractise.online
 [user]
-user.shivarampractice.online
+user.shivarampractise.online
 [cart]
 cart.shivarampractice.online
 [web]
