--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,7 @@ catalogue.shivarampractise.online
 [user]
 user.shivarampractise.online
 [cart]
-cart.shivarampractice.online
+cart.shivarampractise.online
 [web]
 web.shivarampractise.online
 [redis]
