--- a/web.yaml
+++ b/web.yaml
@@ -9,12 +9,12 @@
 
   - name: remove html directory
     ansible.builtin.file:
-      path: /usr/share/nginx/html/
+      path: /usr/share/nginx/html
       state: absent
 
   - name: create html directory
     ansible.builtin.file:
-      path: /usr/share/nginx/html/
+      path: /usr/share/nginx/html
       state: directory
 
   - name: download web app
