--- a/web.yaml
+++ b/web.yaml
@@ -1,12 +1,12 @@
-- name: Install web component
+- name: install web component
   hosts: web
   become: yes
   tasks:
   - name: install nginx
     ansible.builtin.dnf:
-      name: nginx
+      name: nginx 
       state: present
-
+  
   - name: remove html directory
     ansible.builtin.file:
       path: /usr/share/nginx/html
@@ -17,12 +17,12 @@
       path: /usr/share/nginx/html
       state: directory
 
-  - name: download web app
+  - name: Download web app
     ansible.builtin.get_url:
       url: https://roboshop-builds.s3.amazonaws.com/web.zip
       dest: /tmp
 
-  - name: extract application
+  - name: Extract application
     ansible.builtin.unarchive:
       src: /tmp/web.zip
       dest: /usr/share/nginx/html
@@ -30,11 +30,11 @@
 
   - name: copy roboshop configuration
     ansible.builtin.copy:
-      src: roboshop.conf 
+      src: roboshop.conf
       dest: /etc/nginx/default.d/roboshop.conf
 
   - name: start and enable nginx
     ansible.builtin.service:
-      name: nginx 
+      name: nginx
       state: restarted
       enabled: yes
