--- a/shipping.yaml
+++ b/shipping.yaml
@@ -57,3 +57,21 @@
     ansible.builtin.dnf:
       name: mysql
       state: present
+
+  - name: check cities schema exists or not
+    ansible.builtin.command:  mysql -h mysql.shivarampractise.online -uroot -p{{mysql_password}} -sN -e "SELECT COUNT(*) FROM INFORMATION_SCHEMA.SCHEMATA WHERE SCHEMA_NAME = 'cities'"
+    register: schema
+
+  - name: print output
+    ansible.builtin.debug:
+      msg: "schema output: {{schema}}"
+
+  - name: load cities data
+    ansible.builtin.shell: "mysql -h mysql.shivarampractise.online -uroot -p{{mysql_password}}  < /app/schema/shipping.sql"
+    when: schema.stdout != "1"
+
+  - name: start and enable shipping
+    ansible.builtin.service:
+      name: shipping
+      state: restarted
+      enabled: yes
